Added Gemfile.lock to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore Gemfile.lock as it creates issues in cross platform development
+./Gemfile.lock
